updated csv files for inputs and outputs

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 FinalProjectPart1/__pycache__/Asc_Date_Sort_ServiceDatesList_csv.cpython-313.pyc
 FinalProjectPart1/__pycache__/Desc_Sort_PriceList_csv.cpython-313.pyc
+FinalProjectPart1/__pycache__/full_inventory_manu_asc.cpython-313.pyc
+FinalProjectPart1/__pycache__
